# Lifeskillapp

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/dependencies/: auth.py
backend/app/api/dependencies/ai/: diary_summarizer.py
backend/app/api/dependencies/ai/mentor_chatbot/: database.py  main.py  mentor_agent.py  mentor_app.db  mentor_service.py  models.py  utils.py
backend/app/api/dependencies/ai/problem_solving/: db.py  generator.py  main.py  models.py  problem_solving.db  service.py
backend/app/api/dependencies/ai/rag_chatbot/: db_utils.py  langchain_utils.py  langgraph_agent.py  nodes.py  pinecone.py  pydantic_models.py  rag_app.db  shared.py  tools.py  utils.py
backend/app/api/v1/: admin.py  admin_dashboard.py  ai.py  auth.py  chatbot.py  diary.py  finance.py  mentor_chatbot.py  parent.py  problem_solving.py  public.py  quiz.py  rag_chat.py  router.py  safety.py  skills.py  student_levels.py  users.py  vapi.py
backend/app/config/: firebase.py  logging.py  settings.py
backend/app/models/: base.py  skill.py  user.py
backend/app/schemas/: auth.py  base.py  diary.py  quiz.py  safety.py  skill.py  user.py
backend/app/services/: ai.py  auth.py  firebase.py  user.py
backend/app/utils/: auto_quiz_generator.py  exceptions.py  pagination.py  quiz_utils.py  security.py  skill_tracking.py
backend/assets/: Life Skills App API.postman_collection.json  client_oauth.html  config_frontend.json
backend/scripts/: create_admin.py
frontend/: README.md  index.html  package-lock.json  package.json  se.txt  tailwind.config.js  vite.config.js
frontend/src/: App.vue  firebase.js  main.js
frontend/src/assets/: anime-moon-landscape.jpgZone.Identifier  anime-night-sky-illustration.jpgZone.Identifier  boy-fantasy-world.jpgZone.Identifier
frontend/src/components/: AdminBadge.vue  AdminDashboard.vue  AdminFinance.vue  AdminFinanceGame.vue  AdminFinanceVideo.vue  AdminSafety.vue  AdminSafetyComic.vue  AdminSafetyVideo.vue  AdminSkill.vue  BarChart.vue  ChatBot.vue  ComicBot.vue  Conversation.vue  DairyEntry.vue  EngagementChart.vue  FeatureCard3D.vue  FinanceGame.vue  FinanceVideo.vue  FinancevidQuiz.vue  FinancevidView.vue  FinancialLiteracy.vue  HomeView.vue  JoinUs.vue  LifeSkills.vue  LoginView.vue  MentorChatbot.vue  MoodTrendsChart.vue  Navbar.vue  Profile.vue  (+17 more)
(+2 files in other folders)
