[project]
name = "soft-engg-project-may-2025-se-may-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "firebase-admin>=6.9.0",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-ollama>=0.3.0",
    "langchain-pinecone>=0.2.11",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "langsmith>=0.4.7",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=7.3.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.34.3",
    "vapi-server-sdk>=1.7.0",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.13"]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "A", "C4", "SIM", "ERA"]
ignore = [
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within an except clause, raise exceptions with raise ... from err
    "E501",   # Line too long
    "ERA001", # Found commented-out code
    "N805",   # First argument of a method should be named 'self'
    "N806",   # Variable in function should be lowercase
    "SIM102", # Use a single if statement instead of nested if statements
    "SIM117", # Use multiple context managers in a single with statement
    "SIM118", # Use 'key in dict' instead of 'key in dict.keys()'
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
split-on-trailing-comma = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"